--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,41 +6,31 @@
 #    By: mvan-der <mvan-der@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2020/11/06 13:44:38 by mvan-der      #+#    #+#                  #
-#    Updated: 2021/12/14 14:36:38 by mvan-der      ########   odam.nl          #
+#    Updated: 2021/12/14 14:00:35 by mvan-der      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libftprintf.a
-HEADERS = ft_printf.h
+NAME = libft.a
+HEADER = libft.h
 CFLAGS = -Wall -Wextra -Werror
-LIB = ./libft/libft.a
-
-SRCS = conv_cdi.c conv_p.c conv_uxX.c conversion.c ft_count.c ft_printf.c \
-ft_putchar.c ft_putstr.c
+SRCS = ft_calloc.c ft_itoa.c ft_strjoin.c ft_strlen.c
 
 SRCOBJ = $(SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME): libft
-	ar crs $(NAME) $(SRCOBJ) $(LIB)
+$(NAME): $(SRCOBJ)
+	ar crs $(NAME) $(SRCOBJ)
 
 %.o : %.c $(HEADER)
 	$(CC) -c $(FLAGS) -o $@ $<
 
-libft: $(SRCOBJ)
-	cd libft && make
-
 clean:
 	rm -f $(SRCOBJ)
 
-#fclean: clean
-#	rm -f $(NAME)
+fclean: clean
+	rm -f $(NAME)
 
 re: fclean all
 
 .PHONY: all clean fclean re
-fclean: clean
-	rm -f $(NAME)
-	cd libft && make $@
-	
