--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,40 +6,38 @@
 #    By: mvan-der <mvan-der@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2020/11/06 13:44:38 by mvan-der      #+#    #+#                  #
-#    Updated: 2022/01/25 11:24:59 by mvan-der      ########   odam.nl          #
+#    Updated: 2022/01/25 11:17:56 by mvan-der      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libftprintf.a
-HEADERS = ft_printf.h
+NAME = libft.a
+HEADER = libft.h
 CFLAGS = -Wall -Wextra -Werror
-LIB = ./libft/libft.a
 
-SRCS = ft_conv_csdi.c ft_conv_p.c ft_conv_uxX.c ft_count.c \
-ft_printf.c ft_putchar_printf.c ft_putstr_printf.c \
-ft_spec_conv.c ft_itoa_printf.c ft_utoa_printf.c
+SRCS = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
+ft_isascii.c ft_isdigit.c ft_isprint.c ft_itoa.c ft_memccpy.c ft_memchr.c \
+ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_putchar_fd.c \
+ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c ft_split.c ft_strchr.c \
+ft_strdup.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c \
+ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c \
+ft_toupper.c
 
 SRCOBJ = $(SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME): libft
-	cp $(LIB) $(NAME)
+$(NAME): $(SRCOBJ)
 	ar crs $(NAME) $(SRCOBJ)
 
 %.o : %.c $(HEADER)
 	$(CC) -c $(FLAGS) -o $@ $<
-
-libft: $(SRCOBJ)
-	$(MAKE) -C ./libft
 
 clean:
 	rm -f $(SRCOBJ)
 
 fclean: clean
 	rm -f $(NAME)
-	$(MAKE) -C ./libft $@ 
 
 re: fclean all
 
-.PHONY: all libft clean fclean re
+.PHONY: all clean fclean re
